--- a/Moringa_Data_science_Core_W4_Independen_Project_2021_08_Wambui_Kahuthu.ipynb
+++ b/Moringa_Data_science_Core_W4_Independen_Project_2021_08_Wambui_Kahuthu.ipynb
@@ -6,8 +6,7 @@
       "name": "Moringa_Data_science_Core_W4_Independen_Project_2021_08_Wambui_Kahuthu.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNl6B2W2lfzZ5LBNTk8jbNs",
+      "authorship_tag": "ABX9TyNA9JkIN7M1wfEAw3SblOwE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2197,7 +2196,7 @@
       "source": [
         "## Check the equality of the variances between the two groups using Levene's test\n",
         "\n",
-        "stat,p = stats.levene(post1_sample['bluecars_taken'], post2_sample['bluecars_taken'], center='mean') # we use center= mean because our samples are fairly skewed\n",
+        "stat,p = stats.levene(post1_sample['bluecars_taken'], post2_sample['bluecars_taken'], center='mean') # we use center = mean because our samples are fairly/moderately skewed\n",
         "\n",
         "print('Statistic=%.4f, pvalue=%.4f' % (stat, p))\n",
         "\n",
