Added missing info

--- a/Moringa_Data_science_Core_W4_Independen_Project_2021_08_Wambui_Kahuthu.ipynb
+++ b/Moringa_Data_science_Core_W4_Independen_Project_2021_08_Wambui_Kahuthu.ipynb
@@ -6,7 +6,7 @@
       "name": "Moringa_Data_science_Core_W4_Independen_Project_2021_08_Wambui_Kahuthu.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNA9JkIN7M1wfEAw3SblOwE",
+      "authorship_tag": "ABX9TyO7Ldq7a+rDYoqhykm41NBK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
       },
       "source": [
         "**Background of the study**  \n",
-        "After a quick look at the dataset that contains data on the usage of Autolib's cars between 1st January 2018 and 19th June 2018, Autolib's manager claims that the average number of Bluecars taken from station with postal code 75015 is the same as the average number of Bluecars taken from station with postal code 75016. This study seeks to establish whether this claim is true or not.\n",
+        "After a quick look at the dataset that contains data on the usage of Autolib's cars between 1st January 2018 and 19th June 2018, Autolib's manager claims that the average number of Bluecars taken on the weekdays from station with postal code 75015 is the same as the average number of Bluecars taken from station with postal code 75016. This study seeks to establish whether this claim is true or not.\n",
         "\n",
         "**Hypothesis**  \n",
         "Null hypothesis: There is no difference between the average number of cars taken from station with postal code 75015 and the average number of cars taken from station with postal code 75016  \n",
@@ -93,7 +93,7 @@
         "# importing seaborn\n",
         "import seaborn as sns"
       ],
-      "execution_count": 426,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -114,7 +114,7 @@
         "# Load csv dataset with the required data from given url 'http://bit.ly/DSCoreAutolibDataset'\n",
         "autolib = pd.read_csv('http://bit.ly/DSCoreAutolibDataset')"
       ],
-      "execution_count": 427,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
         "# Preview the top 5 entries in our dataset\n",
         "autolib.head()"
       ],
-      "execution_count": 428,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,7 +296,7 @@
         "# Preview the bottom 5 entries in our dataset\n",
         "autolib.tail()"
       ],
-      "execution_count": 429,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -452,7 +452,7 @@
         "# The information includes the number of entries and columns, name of each column, number of non-null values in every column, the data type of each column, and the distribution of each data type\n",
         "autolib.info()"
       ],
-      "execution_count": 430,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,7 +500,7 @@
         "# Verify data type change\n",
         "autolib.dtypes"
       ],
-      "execution_count": 431,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -573,7 +573,7 @@
         "# Display the some records of the dataframe\n",
         "postal_data"
       ],
-      "execution_count": 432,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -723,7 +723,7 @@
         "#display the standardized column names  \n",
         "postal_data.columns"
       ],
-      "execution_count": 433,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -761,7 +761,7 @@
         "# Check for duplicates in the dataset\n",
         "postal_data.duplicated().sum()"
       ],
-      "execution_count": 434,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -808,7 +808,7 @@
         "# Check for null values\n",
         "postal_data.isnull().sum().sum()"
       ],
-      "execution_count": 435,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -855,7 +855,7 @@
         "# Drop rows with '2018-06-19' or '2018-02-24' in the 'date' column\n",
         "postal_data = postal_data.drop(postal_data[(postal_data.date=='2018-06-19')|(postal_data.date=='2018-02-24')].index)"
       ],
-      "execution_count": 436,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -900,7 +900,7 @@
         "# displaying the histogram\n",
         "plt.show()"
       ],
-      "execution_count": 437,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -950,7 +950,7 @@
         "# displaying the histogram\n",
         "plt.show()"
       ],
-      "execution_count": 438,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -989,7 +989,7 @@
         "# View number of records of the cleaned dataset\n",
         "postal_data.shape"
       ],
-      "execution_count": 439,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1023,7 +1023,7 @@
         "# Exporting the cleaned dataset as a csv file\n",
         "postal_data.to_csv('postal_data_75015_76016.csv')"
       ],
-      "execution_count": 440,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1056,7 +1056,7 @@
         "# Display some of the sample's data \n",
         "postal_sample"
       ],
-      "execution_count": 441,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1220,7 +1220,7 @@
         "# Creating a subset with 75016's postal code sample data\n",
         "post2_sample =  postal_sample[['postal_code', 'bluecars_taken']][(postal_sample['postal_code']=='75016')]"
       ],
-      "execution_count": 442,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1262,7 +1262,7 @@
       "source": [
         "post1_sample['bluecars_taken'].mean()"
       ],
-      "execution_count": 443,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1299,7 +1299,7 @@
       "source": [
         "post1_sample['bluecars_taken'].median()"
       ],
-      "execution_count": 444,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1336,7 +1336,7 @@
       "source": [
         "post1_sample['bluecars_taken'].mode()"
       ],
-      "execution_count": 445,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1384,7 +1384,7 @@
       "source": [
         "post2_sample['bluecars_taken'].mean()"
       ],
-      "execution_count": 446,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1421,7 +1421,7 @@
       "source": [
         "post2_sample['bluecars_taken'].median()"
       ],
-      "execution_count": 447,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1458,7 +1458,7 @@
       "source": [
         "post2_sample['bluecars_taken'].mode()"
       ],
-      "execution_count": 448,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1517,7 +1517,7 @@
       "source": [
         "post1_sample['bluecars_taken'].var()"
       ],
-      "execution_count": 449,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1554,7 +1554,7 @@
       "source": [
         "post1_sample['bluecars_taken'].std()"
       ],
-      "execution_count": 450,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1594,7 +1594,7 @@
         "\n",
         "max_taken - min_taken"
       ],
-      "execution_count": 451,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1632,7 +1632,7 @@
         "# Calculating the quantiles \n",
         "post1_sample['bluecars_taken'].quantile([0.25,0.5,0.75])"
       ],
-      "execution_count": 452,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1676,7 +1676,7 @@
         "\n",
         "Q3-Q1"
       ],
-      "execution_count": 453,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1713,7 +1713,7 @@
       "source": [
         "post1_sample['bluecars_taken'].skew()"
       ],
-      "execution_count": 454,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1750,7 +1750,7 @@
       "source": [
         "post1_sample['bluecars_taken'].kurt()"
       ],
-      "execution_count": 455,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1796,7 +1796,7 @@
       "source": [
         "post2_sample['bluecars_taken'].var()"
       ],
-      "execution_count": 456,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1833,7 +1833,7 @@
       "source": [
         "post2_sample['bluecars_taken'].std()"
       ],
-      "execution_count": 457,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1873,7 +1873,7 @@
         "\n",
         "max_taken - min_taken"
       ],
-      "execution_count": 458,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1911,7 +1911,7 @@
         "# Calculating the quantiles \n",
         "post2_sample['bluecars_taken'].quantile([0.25,0.5,0.75])"
       ],
-      "execution_count": 459,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1955,7 +1955,7 @@
         "\n",
         "Q3-Q1"
       ],
-      "execution_count": 460,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1992,7 +1992,7 @@
       "source": [
         "post2_sample['bluecars_taken'].skew()"
       ],
-      "execution_count": 461,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2029,7 +2029,7 @@
       "source": [
         "post2_sample['bluecars_taken'].kurt()"
       ],
-      "execution_count": 462,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2085,7 +2085,7 @@
         "\n",
         "plt.show()\n"
       ],
-      "execution_count": 463,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2133,7 +2133,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 464,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2208,7 +2208,7 @@
         "else:\n",
         "\tprint('The two variances are approximately equal')"
       ],
-      "execution_count": 465,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2255,7 +2255,7 @@
         "else:\n",
         "\tprint('Sample looks Gaussian')"
       ],
-      "execution_count": 466,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2273,7 +2273,7 @@
         "id": "LwS4McOjCblH"
       },
       "source": [
-        "Since the samples are independently and randomly drawn, the distribution of the residuals between the two groups follow the normal distribution, and the variances between the two groups are equal, we will conduct a Student t-test."
+        "Since the samples are independently and randomly drawn, the distribution of the residuals between the two groups follow the normal distribution, and the variances between the two groups are approximately equal, we will conduct a Student t-test."
       ]
     },
     {
@@ -2292,11 +2292,11 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "da191473-c446-49f4-d3f2-546024036fcb"
+        "outputId": "0370eb30-330e-4c7e-c598-eafd77486006"
       },
       "source": [
         "# Conduct the independent Student t-test using scipy.stats, use the stats.ttest_ind() method\n",
-        "stat,p = stats.ttest_ind(post1_sample['bluecars_taken'], post2_sample['bluecars_taken'], equal_var = True)\n",
+        "stat,p = stats.ttest_ind(post1_sample['bluecars_taken'], post2_sample['bluecars_taken'], equal_var = False)\n",
         "\n",
         "print('Statistic=%.14f, pvalue=%.14f' % (stat, p))\n",
         "\n",
@@ -2307,12 +2307,12 @@
         "else:\n",
         "\tprint('We fail to reject the null hypothesis')"
       ],
-      "execution_count": 467,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Statistic=5.40272690627293, pvalue=0.00000027472204\n",
+            "Statistic=5.40272690627293, pvalue=0.00000029419967\n",
             "We reject the null hypothesis\n"
           ],
           "name": "stdout"
