--- a/Moringa_Data_science_Core_W4_Independen_Project_2021_08_Wambui_Kahuthu.ipynb
+++ b/Moringa_Data_science_Core_W4_Independen_Project_2021_08_Wambui_Kahuthu.ipynb
@@ -6,7 +6,7 @@
       "name": "Moringa_Data_science_Core_W4_Independen_Project_2021_08_Wambui_Kahuthu.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPPxJjcSz6LhJOiI3U0j4+9",
+      "authorship_tag": "ABX9TyOIzIg9RyQ1jM0cvXJBLvPX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,14 +47,14 @@
         "After a quick look at the dataset that contains data on the usage of Autolib's cars between 1st January 2018 and 19th June 2018, Autolib's manager claims that the average number of Bluecars taken on the weekdays from station with postal code 75015 is the same as the average number of Bluecars taken from station with postal code 75016. This study seeks to establish whether this claim is true or not.\n",
         "\n",
         "**Hypothesis**  \n",
-        "Null hypothesis: There is no difference between the average number of cars taken from station with postal code 75015 and the average number of cars taken from station with postal code 75016  \n",
-        "Alternative hypothesis: There is a difference between the average number of cars taken from station with postal code 75015 and the average number of cars taken from station with postal code 75016\n",
+        "Null hypothesis: There is no difference between the average number of bluecars taken from station with postal code 75015 and the average number of bluecars taken from station with postal code 75016 on the weekdays \n",
+        "Alternative hypothesis: There is a difference between the average number of bluecars taken from station with postal code 75015 and the average number of bluecars taken from station with postal code 75016 on the weekdays\n",
         "\n",
         "*Keys*  \n",
         "$H_{0}$ = Null hypothesis  \n",
         "$H_{1}$ = Alternative hypothesis  \n",
-        "$mu_{1}$ = Average number of cars taken from postal code 75015  \n",
-        "$mu_{2}$ = Average number of cars taken from postal code 75016  \n",
+        "$mu_{1}$ = Average number of Bluecars taken from postal code 75015 on the weekdays  \n",
+        "$mu_{2}$ = Average number of cars taken from postal code 75016 on the weekends  \n",
         "\n",
         "$H_{0}$: $mu_{1}$ = $mu_{2}$  \n",
         "$H_{1}$: $mu_{1}$ ≠ $mu_{2}$  \n",
@@ -1196,8 +1196,8 @@
         "id": "cnuO6BEQ5_3l"
       },
       "source": [
-        "# Exporting the cleaned dataset as a csv file\n",
-        "postal_sample.to_csv('postal_sample_75015_76016.csv')"
+        "# Exporting the sample dataset as a csv file\n",
+        "postal_sample.to_csv('postal_sample_75015_75016.csv')"
       ],
       "execution_count": 17,
       "outputs": []
@@ -2304,7 +2304,7 @@
         "outputId": "727a5780-6142-4e39-b8b8-4086bb94b727"
       },
       "source": [
-        "# Conduct the independent Student t-test using scipy.stats, use the stats.ttest_ind() method\n",
+        "# Conduct the independent Welch's t-test using scipy.stats, use the stats.ttest_ind() method\n",
         "stat,p = stats.ttest_ind(post1_sample['bluecars_taken'], post2_sample['bluecars_taken'], equal_var=False)\n",
         "\n",
         "print('Statistic=%.14f, pvalue=%.14f' % (stat, p))\n",
