--- a/Moringa_Data_science_Core_W4_Independen_Project_2021_08_Wambui_Kahuthu.ipynb
+++ b/Moringa_Data_science_Core_W4_Independen_Project_2021_08_Wambui_Kahuthu.ipynb
@@ -6,7 +6,7 @@
       "name": "Moringa_Data_science_Core_W4_Independen_Project_2021_08_Wambui_Kahuthu.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOIzIg9RyQ1jM0cvXJBLvPX",
+      "authorship_tag": "ABX9TyPbtX1CctYfHPUXG/u5xFCx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,11 +44,11 @@
       },
       "source": [
         "**Background of the study**  \n",
-        "After a quick look at the dataset that contains data on the usage of Autolib's cars between 1st January 2018 and 19th June 2018, Autolib's manager claims that the average number of Bluecars taken on the weekdays from station with postal code 75015 is the same as the average number of Bluecars taken from station with postal code 75016. This study seeks to establish whether this claim is true or not.\n",
+        "After a quick look at the dataset that contains data on the usage of Autolib's cars between 1st January 2018 and 19th June 2018, Autolib's manager claims that the average number of Bluecars taken from station with postal code 75015 is the same as the average number of Bluecars taken from station with postal code 75016 on the weekdays. This study seeks to establish whether this claim is true or not.\n",
         "\n",
         "**Hypothesis**  \n",
-        "Null hypothesis: There is no difference between the average number of bluecars taken from station with postal code 75015 and the average number of bluecars taken from station with postal code 75016 on the weekdays \n",
-        "Alternative hypothesis: There is a difference between the average number of bluecars taken from station with postal code 75015 and the average number of bluecars taken from station with postal code 75016 on the weekdays\n",
+        "Null hypothesis: There is no difference between the average number of Bluecars taken from station with postal code 75015 and the average number of Bluecars taken from station with postal code 75016 on the weekdays   \n",
+        "Alternative hypothesis: There is a difference between the average number of Bluecars taken from station with postal code 75015 and the average number of Bluecars taken from station with postal code 75016 on the weekdays\n",
         "\n",
         "*Keys*  \n",
         "$H_{0}$ = Null hypothesis  \n",
@@ -93,7 +93,7 @@
         "# importing seaborn\n",
         "import seaborn as sns"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -114,7 +114,7 @@
         "# Load csv dataset with the required data from given url 'http://bit.ly/DSCoreAutolibDataset'\n",
         "autolib = pd.read_csv('http://bit.ly/DSCoreAutolibDataset')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
         "# Preview the top 5 entries in our dataset\n",
         "autolib.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,7 +296,7 @@
         "# Preview the bottom 5 entries in our dataset\n",
         "autolib.tail()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -452,7 +452,7 @@
         "# The information includes the number of entries and columns, name of each column, number of non-null values in every column, the data type of each column, and the distribution of each data type\n",
         "autolib.info()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,7 +500,7 @@
         "# Verify data type change\n",
         "autolib.dtypes"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -573,7 +573,7 @@
         "# Display the some records of the dataframe\n",
         "postal_data"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -723,7 +723,7 @@
         "#display the standardized column names  \n",
         "postal_data.columns"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -761,7 +761,7 @@
         "# Check for duplicates in the dataset\n",
         "postal_data.duplicated().sum()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -808,7 +808,7 @@
         "# Check for null values\n",
         "postal_data.isnull().sum().sum()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -855,7 +855,7 @@
         "# Drop rows with '2018-06-19' or '2018-02-24' in the 'date' column\n",
         "postal_data = postal_data.drop(postal_data[(postal_data.date=='2018-06-19')|(postal_data.date=='2018-02-24')].index)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -900,7 +900,7 @@
         "# displaying the histogram\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -950,7 +950,7 @@
         "# displaying the histogram\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -989,7 +989,7 @@
         "# View number of records of the cleaned dataset\n",
         "postal_data.shape"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1023,7 +1023,7 @@
         "# Exporting the cleaned dataset as a csv file\n",
         "postal_data.to_csv('postal_data_75015_76016.csv')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1056,7 +1056,7 @@
         "# Display some of the sample's data \n",
         "postal_sample"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1199,7 +1199,7 @@
         "# Exporting the sample dataset as a csv file\n",
         "postal_sample.to_csv('postal_sample_75015_75016.csv')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1232,7 +1232,7 @@
         "# Creating a subset with 75016's postal code sample data\n",
         "post2_sample =  postal_sample[['postal_code', 'bluecars_taken']][(postal_sample['postal_code']=='75016')]"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1274,7 +1274,7 @@
       "source": [
         "post1_sample['bluecars_taken'].mean()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1311,7 +1311,7 @@
       "source": [
         "post1_sample['bluecars_taken'].median()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1348,7 +1348,7 @@
       "source": [
         "post1_sample['bluecars_taken'].mode()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1395,7 +1395,7 @@
       "source": [
         "post2_sample['bluecars_taken'].mean()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1432,7 +1432,7 @@
       "source": [
         "post2_sample['bluecars_taken'].median()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1469,7 +1469,7 @@
       "source": [
         "post2_sample['bluecars_taken'].mode()"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1526,7 +1526,7 @@
       "source": [
         "post1_sample['bluecars_taken'].var()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1563,7 +1563,7 @@
       "source": [
         "post1_sample['bluecars_taken'].std()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1603,7 +1603,7 @@
         "\n",
         "max_taken - min_taken"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1641,7 +1641,7 @@
         "# Calculating the quantiles \n",
         "post1_sample['bluecars_taken'].quantile([0.25,0.5,0.75])"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1685,7 +1685,7 @@
         "\n",
         "Q3-Q1"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1722,7 +1722,7 @@
       "source": [
         "post1_sample['bluecars_taken'].skew()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1759,7 +1759,7 @@
       "source": [
         "post1_sample['bluecars_taken'].kurt()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1805,7 +1805,7 @@
       "source": [
         "post2_sample['bluecars_taken'].var()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1842,7 +1842,7 @@
       "source": [
         "post2_sample['bluecars_taken'].std()"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1882,7 +1882,7 @@
         "\n",
         "max_taken - min_taken"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1920,7 +1920,7 @@
         "# Calculating the quantiles \n",
         "post2_sample['bluecars_taken'].quantile([0.25,0.5,0.75])"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1964,7 +1964,7 @@
         "\n",
         "Q3-Q1"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2001,7 +2001,7 @@
       "source": [
         "post2_sample['bluecars_taken'].skew()"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2038,7 +2038,7 @@
       "source": [
         "post2_sample['bluecars_taken'].kurt()"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2094,7 +2094,7 @@
         "\n",
         "plt.show()\n"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2142,7 +2142,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2217,7 +2217,7 @@
         "else:\n",
         "\tprint('The two variances are approximately equal')"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2264,7 +2264,7 @@
         "else:\n",
         "\tprint('Sample looks Gaussian')"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2316,7 +2316,7 @@
         "else:\n",
         "\tprint('We fail to reject the null hypothesis')"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
