--- a/Moringa_Data_science_Core_W4_Independen_Project_2021_08_Wambui_Kahuthu.ipynb
+++ b/Moringa_Data_science_Core_W4_Independen_Project_2021_08_Wambui_Kahuthu.ipynb
@@ -6,7 +6,7 @@
       "name": "Moringa_Data_science_Core_W4_Independen_Project_2021_08_Wambui_Kahuthu.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPbtX1CctYfHPUXG/u5xFCx",
+      "authorship_tag": "ABX9TyOE+cHRQD375N4fb/t/Jsgz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
         "$H_{0}$ = Null hypothesis  \n",
         "$H_{1}$ = Alternative hypothesis  \n",
         "$mu_{1}$ = Average number of Bluecars taken from postal code 75015 on the weekdays  \n",
-        "$mu_{2}$ = Average number of cars taken from postal code 75016 on the weekends  \n",
+        "$mu_{2}$ = Average number of Bluecars taken from postal code 75016 on the weekends  \n",
         "\n",
         "$H_{0}$: $mu_{1}$ = $mu_{2}$  \n",
         "$H_{1}$: $mu_{1}$ ≠ $mu_{2}$  \n",
